# CommonMS_Prototype

./: .CentralPlanning.txt.un~  .Dockerfile.un~  .Headers.hpp.swp  .Headers.hpp.un~  .Makefile.un~  .Readme.md.un~  .init.sh.un~  .log.txt.swp  .log.txt.un~  CMakeRef  CentralPlanning.txt  Dockerfile  Headers.hpp  Makefile  Readme.md  init.sh  log.txt
CMAKE_PRACTICE/: .CMakeList.txt.swp  .CMakeList.txt.un~  .CMakeLists.txt.un~  .notes.un~  .test.cpp.un~  CMakeCache.txt  CMakeLists.txt  CmakeTest  Makefile  a.out  cmake_install.cmake  notes  test.cpp
Cmake2/: .CMakeList.txt.un~  bank
app00_Banco/: .Bank.hpp.un~  .main.cpp.un~  Bank.cpp  Bank.hpp  a.out  main.cpp
app00_Banking/: .main.cpp.un~  Makefile  main.cpp
app00_BusinessRetail/: .Business.cpp.swp  .Business.cpp.un~  .Business.hpp.swp  .Business.hpp.un~  .Client.hpp.swp  .Client.hpp.un~  .Makefile.un~  .Product.cpp.swp  .Product.cpp.un~  .Product.hpp.swp  .Product.hpp.un~  .Transaction.cpp.swp  .Transaction.cpp.un~  .Transaction.hpp.swp  .Transaction.hpp.un~  .UI.cpp.un~  .UI.hpp.swp  .UI.hpp.un~  .User.cpp.swp  .User.cpp.un~  .User.hpp.swp  .User.hpp.un~  .Utils.hpp.swp  .Utils.hpp.un~  .main.cpp.swp  .main.cpp.un~  Business.cpp  Business.hpp  Client.cpp  Makefile  (+14 more)
app02_VideoLibrary/game/: CMakeLists.txt  Makefile  README.md  cube
app02_VideoLibrary/game/include/: header.h  keys.h
app02_VideoLibrary/game/maps/: 10  easy  hello  hellosad  loard  m1.ber  m2.ber  m7.ber
app02_VideoLibrary/game/srcs/: draw.c  inits.c  keys.c  main.c  map.c  map_creation.c  move.c  parse.c  pixel_manipulation.c  static_rtn.c
(+214 files in other folders)
